--- a/public_auth/profile.html
+++ b/public_auth/profile.html
@@ -43,7 +43,7 @@
                         </div>
                         <div class="card-action">
                           
-                          <a href="#">Aloitetaan</a>
+                          <a href="/quiz/start">Aloitetaan</a>
                         </div>
                       </div>
 
