ominaisuuksia lisätty. uuden quizin tekeminen enää puuttuu.

--- a/public_auth/profile.html
+++ b/public_auth/profile.html
@@ -82,7 +82,7 @@
                                     </div>
                                     <div class="card-action">
                                         
-                                        <a href="#">Siirry</a>
+                                        <a href="/data/all">Siirry</a>
                                     </div>
                             </div>
 
@@ -91,9 +91,10 @@
                         
                             <div class="card blue-grey darken-1">
                                     <div class="card-content white-text">
-                                        <span class="card-title">Muokkaa profiilia</span>
+                                        <span class="card-title">Profiili ja ennätykset</span>
                                         <p>
-                                            Tarkista tietosi ja muokkaa niitä. Muista pitää salasanasi ajan tasalla!
+                                            Tarkista omat tietosi ja muokkaa niitä. Täältä näet myös henkilökohtaiset
+                                            ennätyksesi.
                                         </p>
                                     </div>
                                     <div class="card-action">
