pdf-ominaisuus lisätty.

--- a/public_auth/profile.html
+++ b/public_auth/profile.html
@@ -11,6 +11,26 @@
 
  <!-- Compiled and minified JavaScript -->
  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+
+ <!-- SEO ALKAA -->
+
+
+ <title>Quiz-App: Oma profiili</title>
+ <meta name="description" content="QuizApp.fi | Oma profiili | Aloita uusi peli, tarkastele tuloksia tai muokkaa profiiliasi."> 
+ <meta name="og:title" property="og:title" content="Kilpaile kavereidesi kanssa uudessa sovelluksessa!"> 
+ <meta property="og:description" 
+content="QuizApp.fi: Sovellus, jolla voit haastaa itsesi ja 
+kaverisi kilpailuun. Rekisteröidy jo tänään, se on ilmaista!" />
+ <meta property="og:url" content="http://localhost:3000/images/quiz/default.jpg/" />
+ <meta name="robots" content="index, follow"> 
+
+ <!-- SEO LOPPUU -->
+
+
+
+
+
+
 </head>
 
 
