--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,22 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Quiz-sovellus!</title>
+
+
+    <!-- SEO ALKAA -->
+
+
+    <title>Kirjaudu sisään</title>
+    <meta name="description" content="QuizApp.fi: Sovellus, jolla voit haastaa itsesi ja 
+    kaverisi kilpailuun. Rekisteröidy jo tänään, se on ilmaista!"> 
+    <meta name="og:title" property="og:title" content="Kilpaile kavereidesi kanssa uudessa sovelluksessa!"> 
+    <meta property="og:description" 
+  content="QuizApp.fi: Sovellus, jolla voit haastaa itsesi ja 
+  kaverisi kilpailuun. Rekisteröidy jo tänään, se on ilmaista!" />
+    <meta property="og:url" content="http://localhost:3000/images/quiz/default.jpg/" />
+    <meta name="robots" content="index, follow"> 
+
+    <!-- SEO LOPPUU -->
     <link rel="stylesheet" href="./stylesheets/style-login.css">
     <script src="https://cdn.jsdelivr.net/npm/vue@2.5.17/dist/vue.js"></script>
   </head>
