--- a/public_auth/results.html
+++ b/public_auth/results.html
@@ -13,6 +13,22 @@
 
  <!-- Compiled and minified JavaScript -->
  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+
+
+ <!-- SEO ALKAA -->
+
+
+ <title>Quiz-App: Lopputulokset</title>
+ <meta name="description" content="QuizApp.fi | Tarkastele tuloksiasi, ja valmistaudu uuteen yritykseen!"> 
+ <meta name="og:title" property="og:title" content="Kilpaile kavereidesi kanssa uudessa sovelluksessa!"> 
+ <meta property="og:description" 
+content="QuizApp.fi: Sovellus, jolla voit haastaa itsesi ja 
+kaverisi kilpailuun. Rekisteröidy jo tänään, se on ilmaista!" />
+ <meta property="og:url" content="http://localhost:3000/images/quiz/default.jpg/" />
+ <meta name="robots" content="index, follow"> 
+
+ <!-- SEO LOPPUU -->
+
 </head>
 
 
