kysymysten lisääminen toimii. tuloksiin pitäisi saada päivittyvä genre-valikko

--- a/public_auth/profile.html
+++ b/public_auth/profile.html
@@ -80,7 +80,7 @@ kaverisi kilpailuun. Rekisteröidy jo tänään, se on ilmaista!" />
                             </div>
                             <div class="card-action">
                                 
-                                <a href="#">Aloitetaan</a>
+                                <a href="/create">Aloitetaan</a>
                             </div>
                     </div>
 
@@ -113,8 +113,7 @@ kaverisi kilpailuun. Rekisteröidy jo tänään, se on ilmaista!" />
                                     <div class="card-content white-text">
                                         <span class="card-title">Profiili ja ennätykset</span>
                                         <p>
-                                            Tarkista omat tietosi ja muokkaa niitä. Täältä näet myös henkilökohtaiset
-                                            ennätyksesi.
+                                            Tarkista omat tietosi ja muokkaa niitä.
                                         </p>
                                     </div>
                                     <div class="card-action">
