--- a/public_auth/edit-profile.html
+++ b/public_auth/edit-profile.html
@@ -56,9 +56,9 @@ kaverisi kilpailuun. Rekisteröidy jo tänään, se on ilmaista!" />
                      <div class="white-text s6 l6 center">
                             
                                 Vaihda email:<br>
-                                <input class="col s12 l6" v-model="email" type="text" name="email" value="uusi email..."><br>
+                                <input class="col s12 l6 inputti" v-model="email" type="text" name="email" value="uusi email..."><br>
                                 Vaihda ikä:<br>
-                                <input class="col s12 l6" v-model.number="age" type="text" name="age" value="uusi ikä..."><br><br>
+                                <input class="col s12 l6 inputti" v-model.number="age" type="text" name="age" value="uusi ikä..."><br><br>
                                 <button v-on:click="postForm" class="waves-effect blue darken-1 btn white-text">Vaihda</button>
                                    
                     </div>
