--- a/public_auth/results.html
+++ b/public_auth/results.html
@@ -76,6 +76,9 @@ kaverisi kilpailuun. Rekisteröidy jo tänään, se on ilmaista!" />
                 </ul>
                 <div class="center">
                     <a href="/profile" class="waves-effect blue darken-1 btn">Valmis</a>
+                    <br><br>
+                    <h4 class="white-text">Haluatko yrittää uudestaan samoilla asetuksilla? Paina tästä.</h4>
+                    <button v-on:click="retry" class="waves-effect blue darken-1 btn">Yritä uudestaan</button>
                 </div>
             </div>
             <!-- VUE LOPPUU -->
