--- a/public_create/createquiz.html
+++ b/public_create/createquiz.html
@@ -49,7 +49,7 @@ kaverisi kilpailuun. Rekisteröidy jo tänään, se on ilmaista!" />
                     <div class="col s12 l6 center"> 
                        <h3 class="white-text">Luo uusi genre</h3>
 
-                       <input class="col s12 l6" v-model="newGenre" type="text" name="genre" value="uusi genre...">
+                       <input class="col s12 l6 inputti" v-model="newGenre" type="text" name="genre" value="uusi genre...">
                        <button v-on:click="createGenre" class="waves-effect blue darken-1 btn">Luo genre</button>
                        <br><br><br>
                        <p class="white-text">Kun painat "luo genre", sivu latautuu uudelleen ja luomasi genre
