--- a/public_auth/startquiz.html
+++ b/public_auth/startquiz.html
@@ -59,7 +59,8 @@ kaverisi kilpailuun. Rekisteröidy jo tänään, se on ilmaista!" />
                      <div class="col s12 l6 center"> 
                             <h4 class="white-text center">Kysymysten määrä:</h2>          
                             <question-amount></question-amount>
-                         </div>
+                            <p class="white-text">{{infoText}}</p>
+                    </div>
             </div>
 
             <div class="col l6 center">
